# hydro-root-cause

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  README.md  app.py  app_adult.py  app_mnist.py  buildinfo.json  celery.conf  celeryd.conf  client.py  contract.py  demo.ipynb  docker-compose.yaml  hydro-root-cause-openapi.yaml  jenkinsfile.disable.groovy  jenkinsfile.groovy  pyproject.toml  reqstore_client.py  reqstore_test.py  requirements.txt  rise_demo.ipynb  root_cause_demo.ipynb  root_cause_request_json_schema.json  start.sh  supervisor.conf  type_conversions.py  utils.py  version.json
.github/workflows/: ci.yaml  docker-ci.yaml  release.yaml
anchor/: setup.py
anchor/anchor/: __init__.py  anchor_core.py  anchor_explainer.py  anchor_explanation.py  anchor_tabular.py  bundle.js  webpack.config.js
anchor2/: setup.py
anchor_tasks/: __init__.py  tasks.py
configs/: anchor2_adult.json  rise_mnist.json  rise_mobilenetv2.json
demos/: anchor_adult_demo.ipynb  anchor_adult_demo.py  hs_client_demo.ipynb  rise_mnist_demo.ipynb  rise_mobilenet_demo.ipynb  rise_mobilenet_demo.py
docs/: hydro-root-cause-openapi.yaml
examples/: Untitled.ipynb  anchor2_adult_example.ipynb  anchor2_adult_example_2.ipynb  rise_mnist_example.ipynb
json_schemas/: config.json  explanation_request.json
rise/: setup.py
rise_tasks/: __init__.py  tasks.py
rootcause/: app.py  type_conversions.py  utils.py
tasks/: anchor.py  rise.py
tests/: spawn_bullcar_images.py  supported_endpoints_test.py  test_anchor_on_multiple_adult_models.py  test_rise_on_mobilenet.py
(+56 files in other folders)
