[tool.poetry]
name = "rootcause"
version = "3.0.1"
description = ""
authors = ["Hydrospheredata"]
packages = [
    {include = "anchor_tasks"},
    {include = "rise_tasks"}
]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.61.1"
scikit-learn = "^0.24.2"
Pillow = "^8.2.0"
pandas = "~=1.1.5"
Flask = "1.0.2"
requests = "^2.23.0"
scikit-image = "^0.18.1"
hydrosdk = "3.0.1"
grpcio-tools = "1.16"
pymongo = "3.8.0"
celery = {version = "4.4.0rc3", extras = ["mongodb"]}
supervisor = "^4.2.2"
Flask-Cors = "^3.0.10"
jsonschema = "^3.2.0"
waitress = "1.3.1"
s3fs = "0.4.0"
anchor2 = { path = "anchor2/", develop = false }
rise = { path = "rise/", develop = false }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
